# hyperspectral-payload

./: .gitignore  README.md
3D_models/v3/: camera_base.STL  camera_base_adaptor.STL  jetson_base.STL  spectrometer_base.STL  spectrometer_lid.STL
foxglove/: foxglove_layout_generator.py  hyper_hsi_images.json  hyper_other_sensors.json  master_layout.json
ros2_ws/src/bringup/hsi_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/bringup/hsi_bringup/launch/: full_system.launch.py  stereo_only.launch.py
ros2_ws/src/common/hsi_python_utils/: package.xml  setup.cfg  setup.py
ros2_ws/src/common/hsi_python_utils/hsi_python_utils/: __init__.py  hsi_py_utils.py
ros2_ws/src/controller/hsi_system_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/controller/hsi_system_controller/hsi_system_controller/: camera_commands_controller.py
ros2_ws/src/controller/hsi_system_controller/resource/: hsi_system_controller
ros2_ws/src/monitoring/system_profiler/: package.xml  setup.cfg  setup.py
ros2_ws/src/monitoring/system_profiler/system_profiler/: system_profiler.py
ros2_ws/src/processing/hsi_binned_preview_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/processing/hsi_binned_preview_cpp/launch/: hsi_binned_preview.launch.py
ros2_ws/src/processing/hsi_binned_preview_cpp/src/: hsi_binned_preview_node.cpp
ros2_ws/src/processing/radiometric_processing/: package.xml  setup.cfg  setup.py
ros2_ws/src/processing/radiometric_processing/radiometric_processing/: radiometric_processing.py
ros2_ws/src/processing/stereo_binned_preview_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/processing/stereo_binned_preview_cpp/launch/: stereo_binned_preview.launch.py
ros2_ws/src/processing/stereo_binned_preview_cpp/src/: stereo_binned_preview_node.cpp
ros2_ws/src/sensors/gps_monitor_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/sensors/gps_monitor_cpp/include/USB_GPS_EN/: gps.h  main.c
ros2_ws/src/sensors/gps_monitor_cpp/src/: gps_monitor.cpp
ros2_ws/src/sensors/hsi_camera_driver_cpp/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/sensors/hsi_camera_driver_cpp/launch/: hsi_dual_camera.launch.py
ros2_ws/src/sensors/hsi_camera_driver_cpp/src/: hsi_camera_node.cpp
ros2_ws/src/sensors/imu/: CMakeLists.txt  package.xml
ros2_ws/src/sensors/imu/src/: imu.cpp
ros2_ws/src/sensors/spectrometer/: package.xml  setup.cfg  setup.py
ros2_ws/src/sensors/spectrometer/spectrometer/: spectrometer.py
ros2_ws/src/sensors/spectrometer/test/: spectrometer_test.py
ros2_ws/src/sensors/stereo_camera/: CMakeLists.txt  package.xml
ros2_ws/src/sensors/stereo_camera/camera_calibration/cal_results/: extrinsics.yml
ros2_ws/src/sensors/stereo_camera/camera_calibration/procedures/01-capture-chessboard-images/: CMakeLists.txt  capture_calibration_images.cpp  check_camera_syncs.cpp  readme.txt  stream.cpp
ros2_ws/src/sensors/stereo_camera/camera_calibration/procedures/02-stereo-cameras-calibration/: CMakeLists.txt  readme.txt
ros2_ws/src/sensors/stereo_camera/camera_calibration/procedures/02-stereo-cameras-calibration/cal_results/260609_640x480/: intrinsics.yml
ros2_ws/src/sensors/stereo_camera/camera_calibration/procedures/02-stereo-cameras-calibration/cal_results/260610_1280x720/: extrinsics.yml  intrinsics.yml
ros2_ws/src/sensors/stereo_camera/src/: stereo_camera.cpp
