<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hsi_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch files for HSI cameras and processing.</description>
  <maintainer email="maintainer@todo.todo">maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>hsi_python_utils</exec_depend>
  <exec_depend>hsi_camera_driver_cpp</exec_depend>
  <exec_depend>hsi_binned_preview_cpp</exec_depend>
  <exec_depend>stereo_camera</exec_depend>
  <exec_depend>stereo_binned_preview_cpp</exec_depend>
  <exec_depend>hsi_system_controller</exec_depend>
  <exec_depend>system_profiler</exec_depend>
  <exec_depend>spectrometer</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
