<?xml version="1.0"?>
<package format="3">
  <name>hsi_python_utils</name>
  <version>0.0.1</version>
  <description>Shared Python utilities for HSI packages</description>
  <maintainer email="a.roberts18@newcastle.ac.uk">Andrew Roberts</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
